# haskell-book

./: CHANGELOG.md  LICENSE  ghcid.txt  haskell-book.cabal  made-from.txt  package.yaml  stack.yaml
app/: Main.hs
src/: Arith2.hs  Arith3Broken.hs  Arith4.hs  Ch2.hs  Ch3.hs  Ch4.hs  Ch5.hs  Ch6.hs  Ch7.hs  Ch8.hs  Ch9.hs  GreetIfCool1.hs  GreetIfCool2.hs  GreetIfCool3.hs  PoemLines.hs  RegisteredUser1.hs  RegisteredUser2.hs  Reverse.hs  Sing.hs  Test.hs  TupleFunctions.hs  TypeInference1.hs  TypeInference2.hs  WordNumber.hs  ch3.hs  ch8.hs  test.hs
src/ch2/: Ch2.hs
