name:                haskell-book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eatobin/haskell-book#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Tobin
maintainer:          eatobin@gmail.com
copyright:           None
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-book
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
